--- a/.env.example
+++ b/.env.example
@@ -23,3 +23,10 @@ NEXTAUTH_URL="http://localhost:3000"
 # Next Auth Discord Provider
 DISCORD_CLIENT_ID=""
 DISCORD_CLIENT_SECRET=""
+
+# Portfolio Vars
+AWS_KEY=""
+AWS_SECRET=""
+AWS_SECRET_SES=""
+AWS_BUCKET=""
+AWS_REGION=""
