--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "next dev",
     "postinstall": "prisma generate",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "db-seed": "NODE_ENV=development prisma db seed"
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.5",
@@ -39,9 +40,13 @@
     "prettier-plugin-tailwindcss": "^0.2.1",
     "prisma": "^4.9.0",
     "tailwindcss": "^3.2.0",
+    "tsx": "^3.12.2",
     "typescript": "^4.9.4"
   },
   "ct3aMetadata": {
     "initVersion": "7.4.0"
+  },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
   }
 }
