slowly migrating to monorepo setup

--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "krisi-portfolio",
   "version": "0.1.0",
   "private": true,
+  "workspaces": [
+    "apps/*",
+    "packages/*"
+  ],
   "scripts": {
     "build": "next build",
     "dev": "next dev",
