--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -5,14 +5,17 @@
     "types": "./index.ts",
     "license": "MIT",
     "scripts": {
-      "clean": "rm -rf .turbo node_modules",
-      "db:generate": "npm with-env prisma generate",
-      "db:push": "npm with-env prisma db push --skip-generate",
-      "dev": "npm with-env prisma studio --port 5556",
-      "with-env": "dotenv -e ../../.env --"
+      "with-env": "dotenv -e ../../.env --",
+      "clean": "rimraf .turbo node_modules",
+      "db:generate": "npm run with-env prisma generate",
+      "db:push": "npm run with-env prisma db push --skip-generate",
+      "db:seed": "npm run with-env tsx prisma/seed.ts",
+      "dev": "npm run with-env prisma studio --port 5556"
     },
     "dependencies": {
-      "@prisma/client": "^4.9.0"
+      "@prisma/client": "^4.9.0",
+      "@portfolio/data": "*",
+      "@portfolio/web": "*"
     },
     "devDependencies": {
       "dotenv-cli": "^7.0.0",
