--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -13,13 +13,12 @@
       "dev": "npm run with-env prisma studio --port 5556"
     },
     "dependencies": {
-      "@prisma/client": "^4.9.0",
-      "@portfolio/data": "*",
-      "@portfolio/web": "*"
+      "@prisma/client": "^4.9.0"
     },
     "devDependencies": {
       "dotenv-cli": "^7.0.0",
       "prisma": "^4.9.0",
-      "typescript": "^4.9.4"
+      "typescript": "^4.9.4",
+      "@portfolio/data": "*"
     }
   }
