--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -3,10 +3,11 @@
     "name": "@portfolio/web",
     "version": "1.0.0",
     "scripts": {
-      "dev": "next dev",
-      "build": "next build",
-      "start": "next start",
-      "lint": "next lint"
+      "dev": "npm run with-env next dev",
+      "build": "npm run with-env next build",
+      "start": "npm run with-env next start",
+      "lint": "npm run with-env next lint",
+      "with-env": "dotenv -e ../../.env --"
     },
     "dependencies": {
       "next": "latest",
