--- a/turbo.json
+++ b/turbo.json
@@ -21,7 +21,13 @@
       },
       "db:seed": {
         "inputs": ["prisma/seed.ts"],
-        "cache": false
+        "cache": false,
+        "env": [
+          "DATABASE_URL",
+          "NEXTAUTH_URL",
+          "DISCORD_CLIENT_ID",
+          "DISCORD_CLIENT_SECRET"
+        ]
       }
     }
   }
