--- a/turbo.json
+++ b/turbo.json
@@ -28,6 +28,9 @@
           "DISCORD_CLIENT_ID",
           "DISCORD_CLIENT_SECRET"
         ]
+      },
+      "//#clean": {
+        "cache": false
       }
     }
   }
