--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -10,6 +10,7 @@
       "db:generate": "npm run with-env prisma generate",
       "db:push": "npm run with-env prisma db push --skip-generate",
       "db:seed": "npm run with-env tsx prisma/seed.ts",
+      "db:push:force": "npm run with-env prisma db push -- --force-reset",
       "dev": "npm run with-env prisma studio --port 5556"
     },
     "dependencies": {
