--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -3,25 +3,28 @@
     "name": "@portfolio/web",
     "version": "1.0.0",
     "scripts": {
-      "dev": "npm run with-env next dev",
-      "build": "npm run with-env next build",
-      "start": "npm run with-env next start",
-      "lint": "npm run with-env next lint",
-      "with-env": "dotenv -e ../../.env --",
-      "clean": "rimraf .next .turbo node_modules"
+        "dev": "npm run with-env next dev",
+        "build": "npm run with-env next build",
+        "start": "npm run with-env next start",
+        "lint": "npm run with-env next lint",
+        "with-env": "dotenv -e ../../.env --",
+        "clean": "rimraf .next .turbo node_modules"
     },
     "dependencies": {
-      "next": "latest",
-      "react": "^18.2.0",
-      "react-dom": "^18.2.0",
-      "@portfolio/db": "*"
+        "@next/font": "^13.1.6",
+        "@portfolio/db": "*",
+        "framer-motion": "^9.0.1",
+        "next": "latest",
+        "phosphor-react": "^1.4.1",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-responsive-carousel": "^3.2.23"
     },
     "devDependencies": {
-      "@types/node": "^17.0.12",
-      "@types/react": "^18.0.22",
-      "@types/react-dom": "^18.0.7",
-      "eslint": "^7.32.0",
-      "typescript": "^4.5.3"
+        "@types/node": "^17.0.12",
+        "@types/react": "^18.0.22",
+        "@types/react-dom": "^18.0.7",
+        "eslint": "^7.32.0",
+        "typescript": "^4.5.3"
     }
-  }
-  
+}
