--- a/apps/image-service/package.json
+++ b/apps/image-service/package.json
@@ -10,6 +10,7 @@
         "typescript": "^4.5.3"
     },
     "dependencies": {
-        "aws-sdk": "^2.1309.0"
+        "aws-sdk": "^2.1309.0",
+        "sharp": "^0.31.3"
     }
 }
