saving some work

--- a/turbo.json
+++ b/turbo.json
@@ -33,6 +33,13 @@
           "DISCORD_CLIENT_SECRET"
         ]
       },
+      "package": {
+        "cache": false,
+        "persistent": true,
+        "env": [
+          "DATABASE_URL"
+        ]
+      },
       "//#clean": {
         "cache": false
       }
