--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -11,6 +11,7 @@
         "clean": "rimraf .next .turbo node_modules"
     },
     "dependencies": {
+        "@aws-sdk/client-s3": "^3.267.0",
         "@next/font": "^13.1.6",
         "@portfolio/db": "*",
         "framer-motion": "^9.0.1",
