--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -12,6 +12,7 @@
     },
     "dependencies": {
         "@aws-sdk/client-s3": "^3.267.0",
+        "@aws-sdk/s3-request-presigner": "^3.267.0",
         "@next/font": "^13.1.6",
         "@portfolio/db": "*",
         "framer-motion": "^9.0.1",
