--- a/apps/image-service/package.json
+++ b/apps/image-service/package.json
@@ -18,6 +18,7 @@
         "typescript": "^4.5.3"
     },
     "dependencies": {
+        "@portfolio/utils": "*",
         "aws-sdk": "^2.1309.0",
         "sharp": "^0.31.3"
     },
