--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -11,10 +11,11 @@
         "clean": "rimraf .next .turbo node_modules"
     },
     "dependencies": {
-        "@aws-sdk/client-s3": "^3.267.0",
-        "@aws-sdk/s3-request-presigner": "^3.267.0",
+        "@aws-sdk/client-s3": "^3.271.0",
+        "@aws-sdk/s3-request-presigner": "^3.271.0",
         "@next/font": "^13.1.6",
         "@portfolio/db": "*",
+        "@portfolio/utils": "*",
         "framer-motion": "^9.0.1",
         "next": "latest",
         "phosphor-react": "^1.4.1",
