--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "@trpc/next": "^10.10.0",
     "@trpc/react-query": "^10.10.0",
     "@trpc/server": "^10.10.0",
+    "@types/uuid": "^9.0.0",
     "next": "13.1.6",
     "next-auth": "^4.19.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "superjson": "1.12.2",
+    "uuid": "^9.0.0",
     "zod": "^3.20.2",
     "zustand": "^4.3.3"
   },
