--- a/apps/image-service/package.json
+++ b/apps/image-service/package.json
@@ -2,22 +2,26 @@
     "private": true,
     "name": "@portfolio/image-service",
     "version": "1.0.0",
-    "main": "./index.ts",
+    "main": "./dist/index.js",
+    "source": "src/index.ts",
     "scripts": {
         "build": "tsc",
-        "package": "npm run build && npm run zip -r function.zip dist/index.js node_modules"
+        "package": "npm run build && node src/packer.mjs"
     },
     "devDependencies": {
-        "@portfolio/db": "*",
+        "@types/archiver": "^5.3.1",
         "@types/aws-lambda": "^8.10.110",
         "@types/node": "^17.0.12",
         "@types/react": "^18.0.22",
         "@types/react-dom": "^18.0.7",
+        "@types/sharp": "^0.31.1",
+        "archiver": "^5.3.1",
         "aws-lambda": "^1.0.7",
         "eslint": "^7.32.0",
         "typescript": "^4.5.3"
     },
     "dependencies": {
+        "@portfolio/db": "*",
         "@portfolio/utils": "*",
         "aws-sdk": "^2.1309.0",
         "sharp": "^0.31.3"
