--- a/apps/image-service/tsconfig.json
+++ b/apps/image-service/tsconfig.json
@@ -1,12 +1,18 @@
 {
     "extends": "../../tsconfig.json",
     "compilerOptions": {
+        "module": "commonjs",
+        "esModuleInterop": true,
+        "target": "ES2017",
+        "lib": ["ES2017"],
         "outDir": "dist",
         "rootDir": "src",
         "strict": true,
-        "esModuleInterop": true,
         "skipLibCheck": true,
-        "noEmit": false
+        "noEmit": false,
+        "noImplicitAny": true,
+        "sourceMap": true,
     },
-    "include": ["src/**/*.ts"]
+    "include": ["src/**/*.ts"],
+    "exclude": ["node_modules", "dist"]
 }
