--- a/packages/db/tsconfig.json
+++ b/packages/db/tsconfig.json
@@ -1,4 +1,9 @@
 {
     "extends": "../../tsconfig.json",
-    "include": ["index.ts"]
-  }
+    "include": [
+        "index.ts",
+        "**/*.ts",
+        "**/*.tsx",
+        "**/*.d.ts",
+    ]
+}
