--- a/apps/image-service/package.json
+++ b/apps/image-service/package.json
@@ -18,6 +18,8 @@
         "archiver": "^5.3.1",
         "aws-lambda": "^1.0.7",
         "eslint": "^7.32.0",
+        "serverless": "^3.27.0",
+        "serverless-plugin-monorepo": "^0.11.0",
         "typescript": "^4.5.3"
     },
     "dependencies": {
