--- a/apps/image-service/package.json
+++ b/apps/image-service/package.json
@@ -7,7 +7,8 @@
     "scripts": {
         "build": "tsc",
         "clean": "rimraf dist",
-        "sls:deploy": "npm run clean && npm run build && serverless deploy"
+        "sls:deploy": "npm run clean && npm run build && serverless deploy",
+        "printenvs": "echo $AWS_BUCKET; $AWS_UPLOAD_BUCKET"
     },
     "devDependencies": {
         "@types/archiver": "^5.3.1",
@@ -20,6 +21,7 @@
         "aws-lambda": "^1.0.7",
         "eslint": "^7.32.0",
         "serverless": "^3.27.0",
+        "serverless-dotenv-plugin": "^4.0.2",
         "serverless-plugin-monorepo": "^0.11.0",
         "typescript": "^4.5.3"
     },
