--- a/apps/image-service/package.json
+++ b/apps/image-service/package.json
@@ -6,6 +6,7 @@
     "source": "src/index.ts",
     "scripts": {
         "build": "tsc",
+        "test": "jest",
         "clean": "rimraf dist",
         "sls:deploy": "npm run clean && npm run build && serverless deploy",
         "printenvs": "echo $AWS_BUCKET; $AWS_UPLOAD_BUCKET"
@@ -13,6 +14,7 @@
     "devDependencies": {
         "@types/archiver": "^5.3.1",
         "@types/aws-lambda": "^8.10.110",
+        "@types/jest": "^29.4.0",
         "@types/node": "^17.0.12",
         "@types/react": "^18.0.22",
         "@types/react-dom": "^18.0.7",
@@ -20,13 +22,16 @@
         "archiver": "^5.3.1",
         "aws-lambda": "^1.0.7",
         "eslint": "^7.32.0",
+        "jest": "^29.4.3",
         "serverless": "^3.27.0",
         "serverless-dotenv-plugin": "^4.0.2",
         "serverless-plugin-monorepo": "^0.11.0",
+        "ts-jest": "^29.0.5",
         "typescript": "^4.5.3"
     },
     "dependencies": {
         "@aws-sdk/client-s3": "^3.278.0",
+        "@aws-sdk/util-buffer-from": "^3.208.0",
         "@portfolio/db": "*",
         "@portfolio/utils": "*",
         "sharp": "^0.31.3"
