--- a/apps/image-service/tsconfig.json
+++ b/apps/image-service/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "extends": "../../tsconfig.json",
     "compilerOptions": {
-        "module": "commonjs",
+        "module": "ESNext",
         "esModuleInterop": true,
         "target": "ES2017",
         "lib": ["ES2017"],
