--- a/turbo.json
+++ b/turbo.json
@@ -11,6 +11,10 @@
         "cache": false,
         "persistent": true
       },
+      "test": {
+        "cache": false,
+        "persistent": true
+      },
       "db:generate": {
         "inputs": ["prisma/schema.prisma"],
         "cache": false
