--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -3,6 +3,7 @@
     "version": "0.1.0",
     "main": "./index.ts",
     "types": "./index.ts",
+    "type": "module",
     "license": "MIT",
     "scripts": {
       "with-env": "dotenv -e ../../.env --",
