--- a/apps/image-service/tsconfig.json
+++ b/apps/image-service/tsconfig.json
@@ -5,11 +5,11 @@
         "esModuleInterop": true,
         "target": "ES2017",
         "lib": ["ES2017"],
-        "outDir": "dist",
+        "outDir": "./dist",
         "rootDir": "src",
         "strict": true,
         "skipLibCheck": true,
-        "noEmit": false,
+        "noEmit": true,
         "noImplicitAny": true,
         "sourceMap": true,
     },
