--- a/apps/image-service/package.json
+++ b/apps/image-service/package.json
@@ -4,12 +4,11 @@
     "version": "1.0.0",
     "main": "./dist/index.js",
     "source": "src/index.ts",
-    "type": "module",
     "scripts": {
-        "build": "tsc",
+        "build": "tsc && node esbuild.config.cjs",
         "test": "jest",
         "clean": "rimraf dist",
-        "sls:deploy": "npm run clean && npm run build && npm run with-env serverless deploy",
+        "sls:deploy": "npm run with-env serverless deploy",
         "with-env": "dotenv -e ../../.env --",
         "printenvs": "echo $AWS_BUCKET; $AWS_UPLOAD_BUCKET"
     },
