we have progres

--- a/apps/image-service/tsconfig.json
+++ b/apps/image-service/tsconfig.json
@@ -1,17 +1,20 @@
 {
     "extends": "../../tsconfig.json",
     "compilerOptions": {
-        "module": "ESNext",
+        "module": "CommonJS",
         "esModuleInterop": true,
-        "target": "ES2017",
-        "lib": ["ES2017"],
+        "target": "ES2018",
+        "lib": ["ES2018"],
         "outDir": "./dist",
         "rootDir": "src",
         "strict": true,
         "skipLibCheck": true,
-        "noEmit": true,
+        "noEmit": false,
         "noImplicitAny": true,
         "sourceMap": true,
+        "emitDecoratorMetadata": true,
+        "experimentalDecorators": true,
+        "moduleResolution": "node",
     },
     "include": ["src/**/*.ts"],
     "exclude": ["node_modules", "dist"]
