--- a/apps/image-service/package.json
+++ b/apps/image-service/package.json
@@ -5,7 +5,7 @@
     "main": "./dist/index.js",
     "source": "src/index.ts",
     "scripts": {
-        "build": "tsc && node esbuild.config.cjs",
+        "build": "tsc",
         "test": "jest",
         "clean": "rimraf dist",
         "sls:deploy": "npm run with-env serverless deploy",
@@ -20,8 +20,6 @@
         "@types/react": "^18.0.22",
         "@types/react-dom": "^18.0.7",
         "@types/sharp": "^0.31.1",
-        "archiver": "^5.3.1",
-        "aws-lambda": "^1.0.7",
         "eslint": "^7.32.0",
         "jest": "^29.4.3",
         "serverless": "^3.27.0",
