--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -1,11 +1,11 @@
 {
     "name": "@portfolio/db",
     "version": "0.1.0",
-    "main": "./index.ts",
-    "types": "./index.ts",
-    "type": "module",
+    "main": "./dist/index.js",
+    "types": "./index.js",
     "license": "MIT",
     "scripts": {
+      "build": "tsc",
       "with-env": "dotenv -e ../../.env --",
       "clean": "rimraf .turbo node_modules",
       "db:generate": "npm run with-env prisma generate",
