--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -2,7 +2,7 @@
     "name": "@portfolio/db",
     "version": "0.1.0",
     "main": "./dist/index.js",
-    "types": "./index.js",
+    "types": "./index.ts",
     "license": "MIT",
     "scripts": {
       "build": "tsc",
