--- a/apps/image-service/package.json
+++ b/apps/image-service/package.json
@@ -2,8 +2,8 @@
     "private": true,
     "name": "@portfolio/image-service",
     "version": "1.0.0",
-    "main": "./dist/index.js",
-    "source": "src/index.ts",
+    "main": "./dist",
+    "source": "./src/index",
     "scripts": {
         "build": "tsc",
         "test": "jest",
@@ -13,8 +13,7 @@
         "printenvs": "echo $AWS_BUCKET; $AWS_UPLOAD_BUCKET"
     },
     "devDependencies": {
-        "@types/archiver": "^5.3.1",
-        "@types/aws-lambda": "^8.10.110",
+        "@types/aws-lambda": "^8.10.111",
         "@types/jest": "^29.4.0",
         "@types/node": "^17.0.12",
         "@types/react": "^18.0.22",
@@ -26,7 +25,8 @@
         "serverless-dotenv-plugin": "^4.0.2",
         "serverless-plugin-monorepo": "^0.11.0",
         "ts-jest": "^29.0.5",
-        "typescript": "^4.5.3"
+        "typescript": "^4.5.3",
+        "@portfolio/tsconfig": "*"
     },
     "dependencies": {
         "@aws-sdk/client-s3": "^3.278.0",
