--- a/apps/image-service/tsconfig.json
+++ b/apps/image-service/tsconfig.json
@@ -1,21 +1,12 @@
 {
-    "extends": "../../tsconfig.json",
+    "extends": "@portfolio/tsconfig/node.json",
     "compilerOptions": {
-        "module": "CommonJS",
-        "esModuleInterop": true,
-        "target": "ES2018",
-        "lib": ["ES2018"],
-        "outDir": "./dist",
-        "rootDir": "src",
-        "strict": true,
-        "skipLibCheck": true,
-        "noEmit": false,
-        "noImplicitAny": true,
-        "sourceMap": true,
-        "emitDecoratorMetadata": true,
-        "experimentalDecorators": true,
-        "moduleResolution": "node",
+        "baseUrl": "./src",
+        "rootDir": "./src",
+        "outDir": "./dist"
     },
-    "include": ["src/**/*.ts"],
-    "exclude": ["node_modules", "dist"]
+    "exclude": ["node_modules", ".turbo", ".serverless", "dist"],
+    "include": [
+        "src/**/*.ts"
+    ]
 }
