--- a/packages/db/tsconfig.json
+++ b/packages/db/tsconfig.json
@@ -1,25 +1,13 @@
 {
-    "extends": "../../tsconfig.json",
+    "extends": "@portfolio/tsconfig/node.json",
     "compilerOptions": {
-        "module": "CommonJS",
-        "esModuleInterop": true,
-        "target": "ES2018",
-        "lib": ["ES2018"],
         "outDir": "./dist",
-        "rootDir": ".",
-        "strict": true,
-        "skipLibCheck": true,
-        "noEmit": false,
-        "noImplicitAny": true,
-        "sourceMap": true,
-        "emitDecoratorMetadata": true,
-        "experimentalDecorators": true,
-        "moduleResolution": "node",
+        "rootDir": "src",
     },
     "include": [
         "index.ts",
         "**/*.ts",
         "**/*.tsx",
         "**/*.d.ts",
-    ]
+    ],
 }
