--- a/apps/image-service/package.json
+++ b/apps/image-service/package.json
@@ -2,31 +2,34 @@
     "private": true,
     "name": "@portfolio/image-service",
     "version": "1.0.0",
-    "main": "./dist",
-    "source": "./src/index",
+    "main": "./src/index",
+    "types": "./src/index",
     "scripts": {
         "build": "tsc",
         "test": "jest",
         "clean": "rimraf dist",
+        "package": "npm run with-env serverless package",
         "sls:deploy": "npm run with-env serverless deploy",
         "with-env": "dotenv -e ../../.env --",
         "printenvs": "echo $AWS_BUCKET; $AWS_UPLOAD_BUCKET"
     },
     "devDependencies": {
+        "@portfolio/tsconfig": "*",
         "@types/aws-lambda": "^8.10.111",
         "@types/jest": "^29.4.0",
         "@types/node": "^17.0.12",
         "@types/react": "^18.0.22",
         "@types/react-dom": "^18.0.7",
         "@types/sharp": "^0.31.1",
+        "esbuild": "^0.17.10",
         "eslint": "^7.32.0",
         "jest": "^29.4.3",
         "serverless": "^3.27.0",
         "serverless-dotenv-plugin": "^4.0.2",
+        "serverless-esbuild": "^1.39.0",
         "serverless-plugin-monorepo": "^0.11.0",
         "ts-jest": "^29.0.5",
-        "typescript": "^4.5.3",
-        "@portfolio/tsconfig": "*"
+        "typescript": "^4.5.3"
     },
     "dependencies": {
         "@aws-sdk/client-s3": "^3.278.0",
