--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "packages/*"
   ],
   "scripts": {
-    "build": "next build",
-    "dev": "next dev",
-    "lint": "next lint",
-    "start": "next start",
+    "build": "turbo run build",
+    "dev": "turbo run dev --parallel",
+    "lint": "turbo run lint",
+    "package": "turbo run package",
+    "deploy": "turbo run sls:deploy",
     "db-seed": "NODE_ENV=development prisma db seed"
   },
   "dependencies": {
