--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -2,6 +2,8 @@
     "name": "@portfolio/db",
     "version": "0.1.0",
     "license": "MIT",
+    "main": "./index.ts",
+    "types": "./index.ts",
     "scripts": {
       "with-env": "dotenv -e ../../.env --",
       "clean": "rimraf .turbo node_modules",
