--- a/apps/image-service/serverless.yml
+++ b/apps/image-service/serverless.yml
@@ -15,6 +15,7 @@ provider:
 
 plugins:
   - serverless-esbuild
+  - serverless-plugin-monorepo
 
 # only include the Prisma binary required on AWS Lambda while packaging
 package:
@@ -23,8 +24,6 @@ package:
     - 'node_modules/.prisma/client/libquery_engine-rhel-*'
     - '!node_modules/prisma/libquery_engine-*'
     - '!node_modules/@prisma/engines/**'
-    - '../../node_modules/.prisma/client/**'
-    - 'node_modules/sharp/build/Release/**'
     - 'dist/schema.prisma'
 
 custom:
@@ -39,19 +38,6 @@ custom:
     packagerOptions:
       scripts:
         - npm install --arch=x64 --platform=linux sharp
-
-layers:
-  sharp:
-    path: lambdaLayers/SharpLayer
-    name: ${self:provider.stage}-sharp
-    package: 
-      patterns:
-        - node_modules/**
-    description: sharp@0.31.3
-    compatibleRuntimes:
-      - nodejs18.x
-    licenseInfo: Apache License 2.0
-    retain: false
 
 resources:
   Resources:
@@ -74,8 +60,6 @@ resources:
 functions:
   processCreatedObject:
     handler: dist/index.handler
-    layers:
-      - {Ref: SharpLambdaLayer}
     events:
       - s3:
           bucket: portfolio-uploads
