--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -13,7 +13,6 @@
     "dependencies": {
         "@aws-sdk/client-s3": "^3.279.0",
         "@aws-sdk/s3-request-presigner": "^3.279.0",
-        "@next/font": "^13.1.6",
         "@portfolio/db": "*",
         "@portfolio/utils": "*",
         "framer-motion": "^9.0.1",
@@ -24,11 +23,11 @@
         "react-responsive-carousel": "^3.2.23"
     },
     "devDependencies": {
+        "@portfolio/tsconfig": "*",
         "@types/node": "^17.0.12",
         "@types/react": "^18.0.22",
         "@types/react-dom": "^18.0.7",
         "eslint": "^7.32.0",
-        "typescript": "^4.5.3",
-        "@portfolio/tsconfig": "*"
+        "typescript": "^4.5.3"
     }
 }
