showing images nowadays

--- a/.env.example
+++ b/.env.example
@@ -33,3 +33,6 @@ AWS_SECRET_SES=""
 AWS_BUCKET=""
 AWS_UPLOAD_BUCKET=user-uploads
 AWS_REGION=""
+
+NEXT_PUBLIC_AWS_BUCKET=""
+NEXT_PUBLIC_AWS_REGION=""
