--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -20,13 +20,16 @@
         "phosphor-react": "^1.4.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-responsive-carousel": "^3.2.23"
+        "react-responsive-carousel": "^3.2.23",
+        "react-sortablejs": "^6.1.4",
+        "sortablejs": "^1.15.0"
     },
     "devDependencies": {
         "@portfolio/tsconfig": "*",
         "@types/node": "^17.0.12",
         "@types/react": "^18.0.22",
         "@types/react-dom": "^18.0.7",
+        "@types/sortablejs": "^1.15.1",
         "eslint": "^7.32.0",
         "typescript": "^4.5.3"
     }
