--- a/package.json
+++ b/package.json
@@ -13,44 +13,46 @@
     "package": "turbo run package",
     "deploy": "turbo run sls:deploy",
     "db-seed": "NODE_ENV=development prisma db seed",
-    "db-generate": "turbo run db:generate"
+    "db-generate": "turbo run db:generate",
+    "clean": "node clean.js"
   },
   "dependencies": {
-    "@next-auth/prisma-adapter": "^1.0.5",
-    "@tanstack/react-query": "^4.24.4",
-    "@trpc/client": "^10.10.0",
-    "@trpc/next": "^10.10.0",
-    "@trpc/react-query": "^10.10.0",
-    "@trpc/server": "^10.10.0",
-    "@types/uuid": "^9.0.0",
-    "next": "^13.2.4",
-    "next-auth": "^4.20.1",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@tanstack/react-query": "^4.32.6",
+    "@trpc/client": "^10.37.1",
+    "@trpc/next": "^10.37.1",
+    "@trpc/react-query": "^10.37.1",
+    "@trpc/server": "^10.37.1",
+    "@types/uuid": "^9.0.2",
+    "next": "^13.4.12",
+    "next-auth": "^4.22.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "superjson": "1.12.2",
+    "superjson": "1.13.1",
     "uuid": "^9.0.0",
-    "zod": "^3.20.2",
-    "zustand": "^4.3.3"
+    "zod": "^3.21.4",
+    "zustand": "^4.4.0"
   },
   "devDependencies": {
-    "@prisma/client": "^4.12.0",
-    "@types/node": "^18.11.18",
-    "@types/prettier": "^2.7.2",
-    "@types/react": "^18.0.27",
-    "@types/react-dom": "^18.0.10",
-    "@typescript-eslint/eslint-plugin": "^5.50.0",
-    "@typescript-eslint/parser": "^5.50.0",
-    "autoprefixer": "^10.4.13",
-    "eslint": "^8.33.0",
-    "eslint-config-next": "13.1.6",
-    "postcss": "^8.4.21",
-    "prettier": "^2.8.3",
-    "prettier-plugin-tailwindcss": "^0.2.2",
-    "prisma": "^4.12.0",
-    "tailwindcss": "^3.2.4",
-    "tsx": "^3.12.2",
-    "turbo": "^1.8.8",
-    "typescript": "^4.9.5"
+    "@prisma/client": "^5.1.1",
+    "@types/node": "^20.4.8",
+    "@types/prettier": "^2.7.3",
+    "@types/react": "^18.2.18",
+    "@types/react-dom": "^18.2.7",
+    "@typescript-eslint/eslint-plugin": "^6.2.1",
+    "@typescript-eslint/parser": "^6.2.1",
+    "autoprefixer": "^10.4.14",
+    "eslint": "^8.46.0",
+    "eslint-config-next": "13.4.12",
+    "postcss": "^8.4.27",
+    "prettier": "^3.0.1",
+    "prettier-plugin-tailwindcss": "^0.4.1",
+    "prisma": "^5.1.1",
+    "rimraf": "^5.0.1",
+    "tailwindcss": "^3.3.3",
+    "tsx": "^3.12.7",
+    "turbo": "^1.10.12",
+    "typescript": "^5.1.6"
   },
   "ct3aMetadata": {
     "initVersion": "7.4.0"
