--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -15,8 +15,9 @@
         "@aws-sdk/s3-request-presigner": "^3.279.0",
         "@portfolio/db": "*",
         "@portfolio/utils": "*",
+        "eslint-config-next": "^13.5.1",
         "framer-motion": "^9.0.1",
-        "next": "latest",
+        "next": "^13.5.1",
         "phosphor-react": "^1.4.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
